# openim-sdk-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  api.go  build_so.sh  constant.go  cpp_sdk_bridge.go  data.go  export.go  gen_android_so.bat  gen_ios_dylib.sh  gen_linux_so.sh  gen_mac_dylib.sh  gen_openharmony_so.bat  gen_win_dll.bat  go.mod  go.sum  listener.go  listeners.cpp  listeners.hpp  listeners_bridge.cpp  listeners_bridge.h  magefile.go  message.go  run_test.sh  sdk.h
.github/workflows/: auto-build-electron.yml  build-assets-in-release.yml  build-go-win7-dll.yml
c/: CMakeLists.txt
c/src/: test.c
c_cpp_wrapper/: build_dll.bat  build_run_test.bat  build_so.sh  build_test.bat  export.go  gen_ios_dylib.sh  go.mod  go.sum  openimsdk.h  openimsdkcc.cc  openimsdkcc.h  protocol.go  test.c  tools.go
c_wrapper/: build_dll.bat  build_run_test.bat  build_test.bat  c_init_login.go  c_wrapper.h  constant.go  export.go  gen_android_so.bat  gen_ios_dylib.sh  protocol.go  test.c  test.go  tools.go
cpp/include/: README.md  libopenimsdkcc.h  wrapp_cpp_function.inc
cpp/src/: libopenimsdkcc.cc  test.cc
examples/: CMakeLists.txt  main.cpp
go/: constant.go  export.go  go.mod  go.sum  protocol.go  tools.go
include/: imsdk.h
internal/login/: empty_listener.go
openim-sdk-core/: magefile2.go  modgraph.txt  package-lock.json
openim-sdk-core/example/: imgui.ini
openim-sdk-core/integration_test/: go.mod
openim-sdk-core/version/: version
scripts/: build_dll.bat  build_test.bat  gen_android_so.bat
src/: IMSDK.cpp  imsdk.cpp
(+9 files in other folders)
